--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,14 @@
-# Auto detect text files and perform LF normalization
-* text=auto
+<div><body>
+<!DOCTYPE html>
+<html lang="en">   
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Elif Yılmaz</title>
+</head>
+<body>
+</body></div>
+</html>mobil uygulama geliştricisi olarak çalışmaktayım.
+</body> </div color: blue; font-size: 20px; font-family: Arial, sans-serif; text-align: center; margin-top: 50px;
+text color = "blue">Merhaba, ben Elif Yılmaz. 5 yıldır mobil uygulama geliştiricisi olarak çalışmaktayım.</text>
+</body>,
